fixed font-size being too big on mobile

--- a/src/components/css/layout.css
+++ b/src/components/css/layout.css
@@ -275,13 +275,6 @@ a.forBtn {
   }
 }
 
-
-@media only screen and (max-width: 480px) {
-  html {
-    font-size: 100%;
-  }
-}
-
 .fullBackgroundImage {
   background-position: center;
   background-size: cover;
